[gd_scene load_steps=2 format=3 uid="uid://33aic0pf5plh"]

[ext_resource type="Script" path="res://scripts/gui/custom_gui/pu_quit_save_confirmation.gd" id="1_w1baa"]

[node name="quit_save_confirmation" type="ConfirmationDialog"]
initial_position = 4
size = Vector2i(247, 100)
visible = true
ok_button_text = "Quit Without Saving"
script = ExtResource("1_w1baa")

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_custom_action"]
